# anthropic-openai-wrapper

./: .env.template  .gitignore  README.md  chat_demo.py  docker-compose.yaml  entrypoint.sh  gunicorn.conf.py  pyproject.toml  restart_zero_downtime.sh
anth2oai/: __init__.py  admin_routes.py  authen.py  client.py  configs.py  constants.py  database.py  format.py  jwt_auth.py  models.py  patch.py  server.py
anth2oai/server/: app.py  claude.py  codex.py
data/: admin.db-shm  admin.db-wal
front/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
front/src/: main.ts
front/src/api/: index.ts
front/src/assets/: main.scss
front/src/router/: index.ts
front/src/stores/: auth.ts  config.ts
front/src/types/: index.ts
front/src/views/: DashboardView.vue  LoginView.vue  SettingsView.vue
hooks/: post_gen_project.py
tests/: test_cookiecutter.py
